changed folder structure, skeleton loader not visible issue fixed in repo listing page due last push ,new font family,added some more comment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700;800&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -11,6 +12,7 @@
         animation: none;
     }
 }
+
 
 @keyframes rotateAndReturn {
     0% {
@@ -28,6 +30,10 @@
     100% {
         transform: rotate(0deg);
     }
+}
+
+*{
+    font-family: 'Poppins', sans-serif;
 }
 
 .hide-scrollbar::-webkit-scrollbar {
